test/types/sync/vass/ref-sync-2.bad
ref-sync-2.chpl:6: error: calling MYPROC was allowed
